fix: change showcase text for contrast

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ h2 {
 
 #showcase .showcase-content h6 {
     font-weight: 100;
-    font-size: 14px;
+    font-size: 18px;
     letter-spacing: .8rem;
     padding-left: .6rem;
     text-transform: uppercase;
